<resources>
    <string name="app_name">AndroidApp</string>
    <string name="email">vilko.jugovic@gmail.com</string>
    <string name="please_wait">Please wait!</string>
    <string name="no_internet">No internet!</string>
    <string name="items">Videos</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="really_exit">Really exit?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Ok</string>
    <string name="application_made_by">Vilko Jugovic</string>
    <string name="delete">Delete</string>
    <string name="deleteConfirm">Sure you want to delete?</string>
    <string name="emptyAlert">Sorry, subject and message cant be empty!</string>
    <string name="published_date">Published Date</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="videoLink">Video Link</string>
    <string name="sound_board">Sound Board</string>
    <string name="sound_recorder">Sound recorder</string>
    <string name="toggle_flash">Toggle Flash</string>
    <string name="action_settings">Settings</string>
    <string name="scanned_data">Scanned Data</string>
    <string name="audio_recorder">Audio Recorder</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="play_recording">Play Recording</string>
    <string name="stop_playing">Stop Playing</string>
    <string name="status">Start recording</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="emptyInput">Empty field</string>
    <string name="nah">Nah</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>