<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/paddingItems">

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtube_player_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="@dimen/marginTopDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textStyle="bold"
                android:textColor="@color/purple_700"
                android:text="@string/title"/>


            <ImageView
                android:id="@+id/ivFavourite"
                android:layout_width="0dp"
                android:layout_height="@dimen/ivFavouriteHeight"
                android:layout_weight="1"
                android:src="@drawable/heart_outline"/>

        </LinearLayout>


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingTop="@dimen/paddingItems"
            android:textColor="@color/purple_700"
            android:text="@string/published_date"/>

        <TextView
            android:id="@+id/tvPublishedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="yyyy-MM-dd"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingTop="@dimen/paddingItems"
            android:textColor="@color/purple_700"
            android:text="@string/description"/>
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem/random"/>

    </LinearLayout>

</ScrollView>